test/reject/reduction_requires_float_rack.rk
crunch bad_reduce(values: f32s) -> f32:
  let positive = values > <0.0>
  return sum(positive)
